# ocp-freecad-cam

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml  pytest.ini  readme.md  requirements-dev.in  requirements-dev.txt
.github/: CODEOWNERS
.github/workflows/: ci.yml  release.yml
docs/: api.rst  conf.py  index.rst
docs/examples/: b3d_pocket.py  b3d_profile.py  cq_adaptive.py  cq_drill.py  cq_helix.py  cq_pocket.py  cq_profile.py  examples.rst  generate_image.py
src/ocp_freecad_cam/: __init__.py  api.py  api_tool.py  api_util.py  common.py  fc_impl.py  fc_impl_util.py  operations.py  visualizer.py
stubs/Part/: __init__.pyi
tests/: face_with_buggy_outer_wire.brep  test_adaptive.py  test_buggy_outer_wire.py  test_dressup.py  test_drill.py  test_engrave.py  test_gcode.py  test_helix.py  test_params.py  test_profile.py  test_waterline.py
